<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:textStyle="bold"
    android:textColor="@color/colorPrimary"
    android:text="@string/muscle_group_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/img_muscle"
            android:src="@drawable/ic_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:startIconDrawable="@drawable/ic_text"
            app:boxStrokeColor="@color/colorPrimary"
            app:shapeAppearanceOverlay="@style/TextInputShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/muscle_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/setting_fragment_save"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp"
            app:cornerRadius="15dp"
            app:rippleColor="@color/colorPrimary"
            app:icon="@drawable/ic_check"
            app:iconTint="@color/colorPrimary"
            app:iconGravity="textStart"
            app:backgroundTint="@android:color/transparent" />
    </LinearLayout>
</LinearLayout>