<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/setting_shape_button"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            tools:ignore="UselessLeaf">
            <TextView
                android:layout_marginStart="30dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/setting_fragment_muscle_group"
                android:textColor="@color/colorPrimary"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/muscle_icon"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/setting_shape_button"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            tools:ignore="UselessLeaf">
            <TextView
                android:layout_marginStart="30dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/setting_fragment_exercise"
                android:textColor="@color/colorPrimary"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:src="@drawable/exercise_icon"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/setting_shape_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingTop="100dp"
            android:padding="10dp"
            tools:ignore="UselessLeaf">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_height"
                    app:boxStrokeColor="@color/colorPrimary"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    app:shapeAppearanceOverlay="@style/TextInputShape">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/setting_fragment_height"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_weight"
                    app:boxStrokeColor="@color/colorPrimary"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    app:shapeAppearanceOverlay="@style/TextInputShape">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/setting_fragment_weight"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_fragment_save"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp"
                app:cornerRadius="15dp"
                app:rippleColor="@color/colorPrimary"
                app:icon="@drawable/ic_save"
                app:iconTint="@color/colorPrimary"
                app:iconGravity="textStart"
                android:textStyle="bold"
                app:backgroundTint="@android:color/transparent" />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/setting_shape_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingTop="100dp"
            android:padding="10dp"
            tools:ignore="UselessLeaf">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_notification_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_fragment_notification"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    app:useMaterialThemeColors="true" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/setting_fragment_time_start"
                    app:startIconDrawable="@drawable/ic_alarm"
                    app:shapeAppearanceOverlay="@style/TextInputShape"
                    app:startIconTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_input_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="true"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
    </LinearLayout>
</FrameLayout>